objects/TW1_TimeLineStatus_Case__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>TimeLineStatus Cases</relationshipLabel>
        <relationshipName>TimeLineStatus_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Fim__c</fullName>
        <label>Data Fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Inicio__c</fullName>
        <label>Data Início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TimeLineStatus Case</label>
    <nameField>
        <displayFormat>TLSC-{0}</displayFormat>
        <label>TimeLineStatus_Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeLineStatus Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>